@@ -649,7 +649,7 @@ global_gleckler.plot(vmin=-0.1,vmax=0.1,nclasses=25,show_value=True)
 oname = outdir + 'gleckler.pkl'
 if os.path.exists(oname):
     os.remove(oname)
-pickle.dump(global_gleckler,open(oname,'w')) #store gleckler plot as separate file for further finetuning if necessary
+#pickle.dump(global_gleckler,open(oname,'w')) #store gleckler plot as separate file for further finetuning if necessary
 
 rep.section('Summary error statistics')
 rep.figure(global_gleckler.fig,caption='Gleckler et al. (2008) model preformance index')
