@@ -4,6 +4,7 @@ o albedo analysis for VIS and NIR separately for JSBACH raw output
 o bugfix with datetime conversion for GlobalMean plot.
 o proper implementation of multimodel mean
 o implemented Data.date to allow for an easier access to date from a Data object using datetime.datetime
+o implemented standard analysis of variable: surface_upward_flux
 
 
 version 0.1.2 (=rev274)
